--- a/src/SubCard.css
+++ b/src/SubCard.css
@@ -19,6 +19,11 @@
 	z-index: 2;
 }
 
+.track-subcard:hover {
+	background-color: rgb(52, 57, 123);
+	cursor: pointer;
+}
+
 .top-container {
 	position: relative;
 	align-items: center;
@@ -35,7 +40,7 @@
 	color: white;
 }
 
-.top-container img {
+.top-container svg {
 	position: absolute;
 	top: 8px;
 	right: 32px;
@@ -45,7 +50,7 @@
 	margin-top: 32px;
 	margin-left: 32px;
 	margin-bottom: 0px;
-	font-weight: 400;
+	font-weight: 300;
 	font-size: 45px;
 	color: white;
 }
@@ -63,4 +68,9 @@
 #exercise-icon {
 	top: 0px;
 	transform: rotate(-30deg);
+}
+
+.top-container svg:hover path {
+	fill: white;
+	cursor: pointer;
 }
